2016-08-22  Release Manager

	* GCC 6.2.0 released.

2016-08-13  Jason Merrill  <jason@redhat.com>

	PR c++/71972
	* constexpr.c (cxx_eval_array_reference): Handle looking for the
	value of an element we're currently modifying.

2016-08-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/72868
	* constexpr.c (label_matches): Handle case range expressions.

2016-08-11  Jason Merrill  <jason@redhat.com>

	PR c++/73456
	* logic.cc (non_atomic_constraint_p): Handle EXPR_PACK_EXPANSION.

2016-08-08  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/72800
	* lambda.c (add_capture): Check lambda_capture_field_type return
	value for error_mark_node.

2016-08-05  Nathan Sidwell  <nathan@acm.org>

	PR c++/68724
	* pt.c (unify): TRAIT_EXPR is an expr.

2016-08-04  Jason Merrill  <jason@redhat.com>

	PR c++/72415
	* pt.c (tsubst_pack_expansion): Pull a single pack expansion out
	of the TREE_VEC.

2016-07-29  Jason Merrill  <jason@redhat.com>

	PR c++/72457
	* init.c (expand_aggr_init_1): Only handle value-init of bases.
	* constexpr.c (build_data_member_initialization): Handle multiple
	initializers for the same field.

2016-07-25  Jason Merrill  <jason@redhat.com>

	PR c++/71576
	* call.c (convert_like_real): Use lvalue_kind.

	PR c++/71833
	* pt.c (coerce_template_parameter_pack): Fix logic for
	pack index.

2016-07-23  Jason Merrill  <jason@redhat.com>

	PR c++/55922
	PR c++/63151
	* init.c (expand_aggr_init_1): Handle list-initialization from {}.

	PR c++/70709
	* class.c (walk_subobject_offsets): Handle 0-length array.

	PR c++/70778
	* pt.c (tsubst): Also substitute into the template of a
	BOUND_TEMPLATE_TEMPLATE_PARM.

	PR c++/71738
	* pt.c (lookup_template_class_1): Handle getting template from tsubst.

	PR c++/71350
	* decl.c (reshape_init_r): Check complain for missing braces warning.

2016-07-22  Jason Merrill  <jason@redhat.com>

	PR c++/71748
	PR c++/52746
	* pt.c (tsubst_baselink): Call
	adjust_result_of_qualified_name_lookup for unqualified
	destructors.
