@@ -1,3 +1,10 @@
+2016-09-14  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/77539
+	* constexpr.c (get_fundef_copy): Use the original function for
+	non-recursive evaluations.
+	(save_fundef_copy): Always expect a slot to be available.
+
 2016-08-22  Release Manager
 
 	* GCC 6.2.0 released.
